# GNBot

./: .gitignore  README.md
Electronics/: README.md
Electronics/4LDR_Board/: 4LDR_Board-cache.lib  4LDR_Board.cmp  4LDR_Board.kicad_pcb  4LDR_Board.kicad_pcb-bak  4LDR_Board.net  4LDR_Board.pro  4LDR_Board.sch
Electronics/Encoder_Board/: Encoder_Board-cache.lib  Encoder_Board.brd  Encoder_Board.brd-bak  Encoder_Board.cache.dcm  Encoder_Board.net  Encoder_Board.pro  Encoder_Board.sch
Electronics/Encoder_Board (copy)/: Encoder_Board.000  Encoder_Board.brd  Encoder_Board.cache.lib  Encoder_Board.cmp  Encoder_Board.pro  Encoder_Board.sch
Electronics/Encoder_Board_bak/: Encoder_Board.000  Encoder_Board.brd  Encoder_Board.cache.dcm  Encoder_Board.cache.lib  Encoder_Board.cmp  Encoder_Board.net  Encoder_Board.pro  Encoder_Board.sch
Electronics/GNBoard/: GNBoard-cache.lib  GNBoard.brd  GNBoard.cache.dcm  GNBoard.cache.lib  GNBoard.cmp  GNBoard.kicad_pcb  GNBoard.kicad_pcb-bak  GNBoard.net  GNBoard.pro  GNBoard.sch
Electronics/GNBoard_1.0/: GNBoard-cache.lib  GNBoard.cmp  GNBoard.kicad_pcb  GNBoard.kicad_pcb-bak  GNBoard.net  GNBoard.pro  GNBoard.sch  footprints.mod
Electronics/KicadLibs/: 3A_diode.mod  ArduinoMega_custom.mod  LDR_Pins.mod  button_largePads.mod  drill.mod  switch.mod  switch_largePads.mod  switch_power_custom.mod
Hardware/: README.md
Software/: BatteryTest.py  LDR_logger.py  LDR_logger_2.py  LDR_process.py  LDR_process_1.py  LDR_process_2.py  LDR_process_3_forceLinearAngle.py  README.md  RobotDemo.py  basic_communication_example.py  bluetoothTest.py  controller_advanced_levySearch_and_compass.py  controller_advanced_withOpenCVtracking.py  helper.py  log_IMU.py  positionRobot.py  processLightModel.py  process_data.py
Software/Demo/: GNBot  (+1 more)
Software/Libs/vicon/ros-drivers/canon_vbc50i/: CMakeLists.txt  mainpage.dox  manifest.xml
Software/Libs/vicon/ros-drivers/canon_vbc50i/cfg/: CanonParams.cfg  CanonParams.cfgc
Software/Libs/vicon/ros-drivers/canon_vbc50i/include/canon_vbc50i/libCanon/: CanonDriver.h  CanonDriver.old.h  CommManager.h  CommManager.old.h  Datagram.h  DgmQueue.h  JpegReader-ipp.h  JpegReader.h  JpegStreamSaver.h  VideoManager.h  Videogram.h  XString.h  login.h
Software/Libs/vicon/ros-drivers/canon_vbc50i/include/canon_vbc50i/libIppJpeg/: colorcomp.h  dechtbl.h  decoder.h  decqtbl.h  enchtbl.h  encoder.h  encqtbl.h  jpegbase.h  precomp.h
Software/Libs/vicon/ros-drivers/canon_vbc50i/include/canon_vbc50i/libSock/: BaseCom.h  Socket.h  SocketCom.h
Software/Libs/vicon/ros-drivers/canon_vbc50i/msg/: PTZ.msg
Software/Libs/vicon/ros-drivers/canon_vbc50i/src/libCanon/: CMakeLists.txt  CanonDriver.cpp  CanonDriver.old.cpp  CommManager.cpp  Datagram.cpp  DgmQueue.cpp  JpegReader-ipp.cpp  JpegReader.cpp  JpegStreamSaver.cpp  VideoManager.cpp  Videogram.cpp  login.cpp  progress.make
Software/Libs/vicon/ros-drivers/canon_vbc50i/src/libIppJpeg/: CMakeLists.txt  colorcomp.cpp  dechtbl.cpp  decoder.cpp  decqtbl.cpp  enchtbl.cpp  encoder.cpp  encqtbl.cpp  jpegbase.cpp
Software/Libs/vicon/ros-drivers/canon_vbc50i/src/libSock/: Socket.cpp  SocketCom.cpp
Software/Libs/vicon/ros-drivers/canon_vbc50i/src/node/: node.cpp
(+562 files in other folders)
